replace all get(0) occurences with getFirst()