@@ -234,7 +234,7 @@ public class SeqMainFunction extends SeqFunction {
     ImmutableList.Builder<LineOfCode> rInitializations = ImmutableList.builder();
     for (MPORThread thread : pClauses.keySet()) {
       ImmutableList<SeqThreadStatementClause> currentClauses = pClauses.get(thread);
-      SeqThreadStatementBlock firstBlock = currentClauses.get(0).getFirstBlock();
+      SeqThreadStatementBlock firstBlock = currentClauses.getFirst().getFirstBlock();
       ImmutableMap<Integer, SeqThreadStatementClause> labelClauseMap =
           SeqThreadStatementClauseUtil.mapLabelNumberToClause(currentClauses);
       ImmutableMap<Integer, SeqThreadStatementBlock> labelBlockMap =
